--- a/index.html
+++ b/index.html
@@ -1,13 +1,40 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/pn" href="./images/logo1.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Rohit Rajput | Web Developer</title>
+
+  <meta name="description"
+    content="Hi, I'm Rohit Rajput – a passionate Frontend Developer specializing in React, Tailwind CSS, and modern web design. Check out my portfolio to see my work!" />
+  <meta name="author" content="Rohit Rajput" />
+  <meta name="keywords"
+    content="Rohit Rajput, Frontend Developer, React Developer, Web Developer India, TailwindCSS, JavaScript, HTML, CSS, Portfolio" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Rohit Rajput | Frontend Developer" />
+  <meta property="og:description"
+    content="Explore Rohit Rajput’s frontend development portfolio made using React and Tailwind CSS." />
+  <meta property="og:image" content="https://yourdomain.com/preview.jpg" />
+  <meta property="og:url" content="https://yourdomain.com/" />
+  <meta property="og:site_name" content="Rohit Rajput Portfolio" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Rohit Rajput | Frontend Developer" />
+  <meta name="twitter:description"
+    content="Frontend Developer | React & Tailwind Specialist – View my latest work and projects." />
+  <meta name="twitter:image" content="https://yourdomain.com/preview.jpg" />
+  <meta name="twitter:creator" content="@yourTwitterHandle" />
+
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
